# odextra

./: .gitignore  AUTHORS  README  TODO  configure.ac  euler.c  event.c  makefile.am  odeiv_util.h  odextra.h  rk2imp.c  rk4imp.c  rkstep.c  verlet.c
.github/workflows/: ci.yml
doc/: example.c  makefile.am  odextra.texi
ivp/: control.c  cscal.c  cstd.c  evolve.c  gsl_odeiv.h  odeiv_util.h  step.c
ivp/doc/: ode-initval.texi
ivp/doc/examples/: ode-initval.c  odefixed.c
matlab/: ceulers.m  collocation_abc.m  demo_harmonic_oscillator.m  demo_henon_heiles.m  demo_kepler.m  demo_pendulum.m  demo_solar.m  demo_spherical_pendulum.m  demo_vortex.m  euler.m  eulerb.m  eulers.m  eulert.m  explicit_rkstep.m  gauss.m  gauss_abc.m  isexplrk.m  kutta.m  legendre_coeff.m  lobatto3a_abc.m  lobatto3b_abc.m  midpoint.m  ode_harmonic_oscillator.m  ode_henon_heiles.m  ode_kepler.m  ode_pendulum.m  ode_solar.m  ode_vortex.m  odextra_wrapper.m  partitioned_rkstep.m  radau.m  radau1a_abc.m  radau2a_abc.m  rattle.m  rkinit_abc.m  rkstep.m  runge.m  vdp1.m  vecodefunc.m  verlet.m
matlab/private/: solver_fsolve.m  solver_init.m  solver_loop.m  solver_solve.m
tests/: fermi.c  henon.c  kepler.c  linear.c  makefile.am  odextra_test.h  pendulum.c  test.c  toda.c  vortex.c
